# Uni-Stuff

./: .gitignore  README.md  clean-history.sh
.github/workflows/: mirror-to-codeberg.yaml
y2s2/cy2001-research-attachment-1/academic-report/: academic-report.org  academic-report.tex  algorithm.py  handle-packages.sh  pyproject.toml  references.bib
y2s2/cy2001-research-attachment-1/academic-report/data/climbing-down-stairs/: 12-steps-down-1-flight-of-stairs-no-arm-swing-27-03-2025-20-04-23.tsv  12-steps-down-1-flight-of-stairs-no-arm-swing-27-03-2025-20-05-47.tsv  12-steps-down-1-flight-of-stairs-no-arm-swing-27-03-2025-20-06-31.tsv  12-steps-down-1-flight-of-stairs-no-arm-swing-27-03-2025-20-07-00.tsv  12-steps-down-1-flight-of-stairs-no-arm-swing-27-03-2025-20-07-31.tsv  12-steps-down-1-flight-of-stairs-no-arm-swing-27-03-2025-20-08-13.tsv  12-steps-down-1-flight-of-stairs-no-arm-swing-27-03-2025-20-09-33.tsv  12-steps-down-1-flight-of-stairs-no-arm-swing-27-03-2025-20-10-16.tsv  12-steps-down-1-flight-of-stairs-no-arm-swing-27-03-2025-20-10-43.tsv  12-steps-down-1-flight-of-stairs-no-arm-swing-27-03-2025-20-11-14.tsv  12-steps-down-1-flight-of-stairs-no-arm-swing-27-03-2025-20-12-30.tsv  12-steps-down-1-flight-of-stairs-no-arm-swing-27-03-2025-20-12-55.tsv  12-steps-down-1-flight-of-stairs-no-arm-swing-27-03-2025-20-13-20.tsv  12-steps-down-1-flight-of-stairs-no-arm-swing-27-03-2025-20-13-50.tsv  (+36 more)
y2s2/ma0218-introduction-to-data-science-and-artificial-intelligence/mini-project/: README.org  README.tex  export.sh  main.py  pyproject.toml  requirements.txt
(+904 files in other folders)
